vest-dsl/test/bad/size_expr_non_static.vest
// Invalid: size expression requires a statically-sized format
opaque_payload = {
    @len: u16,
    body: [u8; @len],
}

bad = {
    body: [u8; |opaque_payload|],
}
